Enhanced ShoutcastClient to be able to understand Title metadata.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,9 @@ project(sik_radio)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g")
 
-set(SOURCE_FILES main.cc asio/asio.cc asio/epoll.cc asio/tcp.cc asio/driver.cc)
+find_package(Boost REQUIRED COMPONENTS regex)
+include_directories( ${Boost_INCLUDE_DIRS} )
+
+set(SOURCE_FILES main.cc shoutcast.cc asio/asio.cc asio/epoll.cc asio/tcp.cc asio/driver.cc)
 add_executable(sik_radio ${SOURCE_FILES})
+target_link_libraries( sik_radio ${Boost_LIBRARIES} )
