Written app that seems to work.
TODO: starting clients with SSH.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g")
 find_package(Boost REQUIRED COMPONENTS regex)
 include_directories( ${Boost_INCLUDE_DIRS} )
 
-set(SOURCE_FILES
-        main.cc
-        shoutcast.cc
-
+set(ASIO_FILES
         asio/asio.cc
         asio/driver.cc
         asio/epoll.cc
@@ -17,5 +14,20 @@ set(SOURCE_FILES
         asio/tcp.cc
         asio/udp.cc
 )
-add_executable(sik_radio ${SOURCE_FILES})
-target_link_libraries( sik_radio ${Boost_LIBRARIES} )
+
+set(PLAYER_FILES
+        player.cc
+        shoutcast.cc
+)
+
+set(MASTER_FILES
+        master.cc
+)
+
+add_library(asio STATIC ${ASIO_FILES})
+
+add_executable(player ${PLAYER_FILES})
+target_link_libraries(player asio ${Boost_LIBRARIES} )
+
+add_executable(master ${MASTER_FILES})
+target_link_libraries(master asio ${Boost_LIBRARIES} )
